--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group = 'org.example'
+group = 'org.safmoringa'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -12,6 +12,13 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.sparkjava:spark-core:2.9.4'
+    implementation 'org.postgresql:postgresql:42.3.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.sparkjava:spark-template-handlebars:2.7.1'
+    implementation 'org.slf4j:slf4j-simple:2.0.7'
+    implementation 'org.sql2o:sql2o:1.6.0'
+    implementation 'com.github.jknack:handlebars:4.0.6'
 }
 
 test {
